--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.11.3",
+    "path": "^0.12.7",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
