--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.5",
+    "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.9",
     "path": "^0.12.7",
@@ -21,6 +21,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5",
     "vite": "^6.3.1"
   }
 }
