--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@vueuse/motion": "^3.0.3",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "path": "^0.12.7",
