--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.9",
+    "lodash-es": "^4.17.21",
     "path": "^0.12.7",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
