--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@stripe/stripe-js": "^7.3.0",
     "@vueuse/motion": "^3.0.3",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
