--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.9",
+    "dotenv": "^16.5.0",
+    "laravel-echo": "^2.1.4",
     "lodash-es": "^4.17.21",
     "path": "^0.12.7",
     "pinia": "^3.0.2",
+    "pusher-js": "^8.4.0",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1",
+    "vue-toast-notification": "^3.1.3",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
